force-app/main/default/objects/Change_Comparison_Mapping__mdt/Change_Comparison_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Change Comparison Mappings</label>
    <pluralLabel>Change Comparison Mappings</pluralLabel>
</CustomObject>