force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>Field_Labels__c</fullName>
    <label>Field Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>