force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/Hide_Matching_Values__c.field-meta.xml
<CustomField>
    <fullName>Hide_Matching_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Matching Values</label>
    <type>Checkbox</type>
</CustomField>