force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/Root_Record_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Root_Record_Api_Name__c</fullName>
    <label>Root Record Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>