force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueA_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>ValueA_Api_Name__c</fullName>
    <label>ValueA Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>