force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueA_Fields__c.field-meta.xml
<CustomField>
    <fullName>ValueA_Fields__c</fullName>
    <label>ValueA Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>