force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueA_Header__c.field-meta.xml
<CustomField>
    <fullName>ValueA_Header__c</fullName>
    <label>ValueA Header</label>
    <length>50</length>
    <type>Text</type>
</CustomField>