force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueA_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>ValueA_Id_Field__c</fullName>
    <label>ValueA Id Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>