force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueB_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>ValueB_Api_Name__c</fullName>
    <label>ValueB Api Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>