force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueB_Fields__c.field-meta.xml
<CustomField>
    <fullName>ValueB_Fields__c</fullName>
    <label>ValueB Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>