force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueB_Header__c.field-meta.xml
<CustomField>
    <fullName>ValueB_Header__c</fullName>
    <label>ValueB Header</label>
    <length>50</length>
    <type>Text</type>
</CustomField>