force-app/main/default/objects/Change_Comparison_Mapping__mdt/fields/ValueB_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>ValueB_Id_Field__c</fullName>
    <label>ValueB Id Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>